# mipt_mlops

./: Dockerfile  Makefile  gauss_jordan_package-0.1.0-py3-none-any.whl  pyproject.toml  test_script.py
include/: gauss.jordan.hpp
python/: bindings.cpp
src/: gauss_jordan.cpp
